After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 79809 - Disappearing sheet objects
Disappearing sheet objects
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Sheet Objects
git master
Other Linux
: Normal major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-04-24 23:06 UTC by Andreas J. Guelzow
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Andreas J. Guelzow 2002-04-24 23:06:27 UTC
To see this earlier, use the preference dialog to change the number of undo
items (on the 5th tab) to 2.

Create a nice rectangle somewhere on the sheet.

enter "1" into a cell 

enter "2" into another cell

Where did the rectangle go? Apparently finalizing the insert-object command
removed the last reference to the sheet object!?
Comment 1 Andreas J. Guelzow 2002-04-25 00:08:10 UTC
Fixed in cvs head.